--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://bitbucket.org/arminpetrovic/wt22p18916#readme",
   "dependencies": {
     "body-parser": "^1.20.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "fs": "^0.0.1-security"
   }
 }
