--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "fs": "^0.0.1-security"
+    "fs": "^0.0.1-security",
+    "mysql2": "^3.0.1",
+    "sequelize": "^6.28.0"
   }
 }
